--- a/pi/package.json
+++ b/pi/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "clear && sudo node --no-deprecation index.js"
+    "start": "clear && sudo node --no-deprecation --experimental-modules index"
   },
   "author": "",
   "license": "ISC",
