--- a/pi/package.json
+++ b/pi/package.json
@@ -4,11 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "clear && sudo node --no-deprecation --experimental-modules index"
+    "start": "clear && sudo node --no-deprecation --experimental-modules index",
+    "spotify": "nodemon --no-deprecation --experimental-modules spotify",
+    "callback": "nodemon --no-deprecation spotify-auth-callback"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "serialport": "^8.0.5"
+    "axios": "0.19.0",
+    "localtunnel": "^2.0.0",
+    "ngrok": "^3.2.5",
+    "nodemon": "^2.0.2",
+    "serialport": "^8.0.5",
+    "spotify-web-api-node": "^4.0.0"
   }
 }
