--- a/pi/package.json
+++ b/pi/package.json
@@ -4,18 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "clear && sudo node --no-deprecation --experimental-modules index",
-    "spotify": "nodemon --no-deprecation --experimental-modules spotify",
-    "callback": "nodemon --no-deprecation spotify-auth-callback"
+    "startnotyet": "clear && sudo node --no-deprecation --experimental-modules index",
+    "spotify": "nodemon --no-deprecation --experimental-modules spotify.mjs",
+    "callback": "nodemon --no-deprecation spotify-auth-callback",
+    "compile": "ts-node server",
+    "start": "nodemon -e ts --exec \"npm run compile\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "0.19.0",
-    "localtunnel": "^2.0.0",
     "ngrok": "^3.2.5",
     "nodemon": "^2.0.2",
     "serialport": "^8.0.5",
-    "spotify-web-api-node": "^4.0.0"
+    "spotify-web-api-node": "^4.0.0",
+    "ts-node": "^8.5.4",
+    "typescript": "^3.7.3"
   }
 }
