--- a/pi/package.json
+++ b/pi/package.json
@@ -8,12 +8,14 @@
     "spotify": "nodemon --no-deprecation --experimental-modules spotify.mjs",
     "callback": "nodemon --no-deprecation spotify-auth-callback",
     "compile": "ts-node server",
-    "start": "nodemon -e ts --exec \"npm run compile\""
+    "start": "nodemon -e ts --exec \"npm run compile\"",
+    "start-with-daemon-why-bother-building": "ts-node server"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "0.19.0",
+    "ip": "^1.1.5",
     "ngrok": "^3.2.5",
     "nodemon": "^2.0.2",
     "serialport": "^8.0.5",
