TSC builds to dist, because Pi running tsc-node is way too slow

--- a/pi/package.json
+++ b/pi/package.json
@@ -10,7 +10,8 @@
     "compile": "ts-node index",
     "start-pi": "ts-node index",
     "start": "nodemon -e ts --exec \"cls && npm run compile\"",
-    "start-with-daemon-why-bother-building": "ts-node index"
+    "start-with-daemon-why-bother-building": "ts-node index",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
