--- a/pi/package.json
+++ b/pi/package.json
@@ -8,10 +8,11 @@
     "spotify": "nodemon --no-deprecation --experimental-modules spotify.mjs",
     "callback": "nodemon --no-deprecation spotify-auth-callback",
     "compile": "ts-node index",
-    "start-pi": "ts-node index",
+    "start-pi": "node ./dist/index",
     "start": "nodemon -e ts --exec \"cls && npm run compile\"",
     "start-with-daemon-why-bother-building": "ts-node index",
-    "build": "tsc"
+    "build": "tsc",
+    "build-needs-to-run-in-tandem-with-start-or-in-fact-bin-off-ts-node-entirely": ""
   },
   "author": "",
   "license": "ISC",
