--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start-pi": "node ./dist/index",
     "start-ts-node-style": "nodemon -e ts --exec \"cls && npm run compile\"",
     "start": "tsc -w && nodemon index",
+    "dev-pi": "git pull && npm run build && sudo npm run start-pi",
     "start-with-daemon-why-bother-building": "ts-node index",
     "build": "tsc",
     "build-needs-to-run-in-tandem-with-start-or-in-fact-bin-off-ts-node-entirely": ""
