--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "tsc -w && nodemon index",
     "start-pi": "sudo node ./dist/index",
     "dev-pi": "sudo npm run run-dist",
-    "run-dist": "nodemon -e *.js ./dist/index",
+    "run-dist": "nodemon -e *.js ./dist/index.js",
     "build": "tsc"
   },
   "author": "",
