--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev-pi": "sudo npm run run-dist",
     "run-dist": "nodemon -e *.js ./dist/index.js",
     "build": "tsc",
-    "test-vfd": "node dist/test-vfd.js"
+    "test-vfd": "nodemon -e *.js ./dist/test-vfd.js"
   },
   "author": "",
   "license": "ISC",
