--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "axios": "0.19.0",
     "ip": "^1.1.5",
-    "lodash": "^4.17.15",
+    "lodash.chunk": "^4.2.0",
     "ngrok": "^3.2.5",
     "nodemon": "^2.0.2",
     "serialport": "^8.0.5",
