--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc -w && nodemon index",
-    "start-pi": "sudo node ./dist/index",
+    "start-pi": "sudo kilall node && udo node ./dist/index",
     "dev-pi": "sudo npm run run-dist",
     "run-dist": "nodemon -e *.js ./dist/index.js",
     "build": "tsc",
