--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "sourceMap": true,
     "module": "commonjs",
     "target": "es5",
-    "allowJs": true
+    "allowJs": true,
+    "removeComments": true
   },
   "exclude": ["./node_modules/*", "./dist"]
 }
