It's not perfect, but it's mine!

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "module": "commonjs",
     "target": "es5",
     "allowJs": true,
-    "removeComments": true
+    "removeComments": true,
+    "resolveJsonModule": true
   },
   "exclude": ["./node_modules/*", "./dist"]
 }
